Remove JMH benchmarks and add java.base/jdk.internal.misc=ALL-UNNAMED export to experimental profile