@@ -1,4 +1,3 @@
-import me.champeau.jmh.JmhBytecodeGeneratorTask
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
@@ -9,7 +8,6 @@ plugins {
     id 'signing'
     id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
     id 'com.github.hexomod.macro.preprocessor' version '0.9'
-    id 'me.champeau.jmh' version '0.7.3' apply false
     id 'checkstyle'
     id 'org.ajoberstar.grgit' version '5.3.2'
 }
@@ -19,9 +17,6 @@ repositories {
 
 if (!hasProperty('buildProfile')) {
     ext.buildProfile = 'default'
-}
-if (buildProfile == 'experimental') {
-    apply plugin: 'me.champeau.jmh'
 }
 
 group 'org.joml'
@@ -214,6 +209,7 @@ if (buildProfile == 'experimental') {
                         '--add-modules', 'jdk.internal.vm.ci',
                         '--add-modules', 'jdk.unsupported',
 
+                        '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
                         '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED',
                         '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED',
                         '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED',
@@ -231,21 +227,6 @@ if (buildProfile == 'experimental') {
                 '--add-modules', 'jdk.internal.vm.ci,jdk.incubator.vector',
                 '--add-modules', 'jdk.unsupported',
 
-                '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED',
-                '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED',
-                '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED',
-                '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED',
-                '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED',
-                '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.amd64=ALL-UNNAMED',
-        ]
-    }
-
-    tasks.withType(JmhBytecodeGeneratorTask).configureEach {
-        jvmArgs.set([
-                '--enable-preview',
-                '--add-modules', 'jdk.internal.vm.ci,jdk.incubator.vector',
-                '--add-modules', 'jdk.unsupported',
-
                 '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED',
@@ -253,7 +234,7 @@ if (buildProfile == 'experimental') {
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED',
                 '--add-exports', 'jdk.internal.vm.ci/jdk.vm.ci.amd64=ALL-UNNAMED',
-        ])
+        ]
     }
 
     javadoc {
